tests/rosetta/out/Java/apply-a-callback-to-an-array-2.error
javac error: exit status 1
/tmp/TestMochiToJavaapply-a-callback-to-an-array-24196928696/001/ApplyACallbackToAnArray2.java:9: error: cannot find symbol
            f(x);
            ^
  symbol:   method f(Integer)
  location: class ApplyACallbackToAnArray2
/tmp/TestMochiToJavaapply-a-callback-to-an-array-24196928696/001/ApplyACallbackToAnArray2.java:21: error: incompatible types: Object is not a functional interface
        each(s, i -> System.out.println(String.valueOf(i * i)));
        ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
